--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,31 +16,60 @@ add_subdirectory(kuzu)
 
 include_directories(lib)
 
-add_executable(main lib/web_bind.cpp lib/web_database.cpp lib/web_connection.cpp lib/web_prepared_statement.cpp lib/web_query_result.cpp)
+add_executable(kuzu-wasm lib/web_bind.cpp lib/web_database.cpp lib/web_connection.cpp lib/web_prepared_statement.cpp lib/web_query_result.cpp)
 
-target_link_libraries(main kuzu)
+target_link_libraries(kuzu-wasm kuzu)
 
+# Release build
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DNDEBUG")
+  # ... with min size
+  if(WASM_MIN_SIZE)
+    set(CMAKE_CXX_FLAGS_RELEASE "-Oz")
+    set(WASM_LINK_FLAGS "${WASM_LINK_FLAGS} -Oz")
+  else()
+    # ... with max performance
+    set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+    set(WASM_LINK_FLAGS "${WASM_LINK_FLAGS} -O3")
+  endif()
+# Debug build
+elseif(CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
+  set(WASM_LINK_FLAGS "${WASM_LINK_FLAGS} \
+    -sASSERTIONS=1 \
+    -sSAFE_HEAP=2 \
+    -g")
+  # ... with fast linking
+  if(WASM_FAST_LINKING)
+    set(WASM_LINK_FLAGS "${WASM_LINK_FLAGS} -O0")
+  endif()
+endif()
+
+
+message(STATUS "WASM_LINK_FLAGS=${WASM_LINK_FLAGS}")
 set_target_properties(
-  main
+  kuzu-wasm
   PROPERTIES
     LINK_FLAGS
-    "-s FILESYSTEM=1 \
-    -s ALLOW_MEMORY_GROWTH \
+    "${WASM_LINK_FLAGS} \
+    -s FILESYSTEM=1 \
+    -s ALLOW_MEMORY_GROWTH=1 \
     -s MAXIMUM_MEMORY=4GB \
     -s ALLOW_BLOCKING_ON_MAIN_THREAD=1 \
+    -s WARN_ON_UNDEFINED_SYMBOLS=0 \
     -s PTHREAD_POOL_SIZE=navigator.hardwareConcurrency \
     -mbulk-memory -DWEBDB_BULK_MEMORY=1 \
     -sWASM_BIGINT \
     -s ERROR_ON_UNDEFINED_SYMBOLS=0 \
     -lembind \
-    -sASSERTIONS=1 \
-    -sSAFE_HEAP=2 \
-    -g \
+    -s ENVIRONMENT='web,webview,worker' \
+    -s MODULARIZE=1 -s EXPORT_NAME='Kuzu' -s EXPORT_ES6=1 \
     -sNO_DISABLE_EXCEPTION_CATCHING \
-    --embed-file ../kuzu/dataset/demo-db/csv \
-    -s EXPORTED_RUNTIME_METHODS='[\"ccall\", \"stackSave\", \"stackAlloc\", \"stackRestore\"]' \
+    --embed-file ../../kuzu/dataset/demo-db/ \
+    -s EXPORTED_RUNTIME_METHODS='[\"ccall\", \"stackSave\", \"stackAlloc\", \"stackRestore\",\"FS\"]' \
     ")
-    # -s ALLOW_BLOCKING_ON_MAIN_THREAD=1 \
+
+    # --emit-tsd 'interface.d.ts' \
     # -sUSE_PTHREADS=1 -sPTHREAD_POOL_SIZE=4 \
     # -s PTHREAD_POOL_SIZE_STRICT=0
     # -s PROXY_TO_PTHREAD \
