--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -33,11 +33,20 @@ jobs:
     - name: Build Shell Project
       run: |
         make shell
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
+    - name: Deploy to Netlify
+      uses: nwtgck/actions-netlify@v3.0
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: packages/kuzu-shell/dist
-            
+        publish-dir: 'packages/kuzu-shell/dist'
+        production-branch: master
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        deploy-message: "Deploy from GitHub Actions"
+        enable-pull-request-comment: false
+        enable-commit-comment: true
+        overwrites-pull-request-comment: true
+        enable-github-deployment: false
+      env:
+        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+      timeout-minutes: 10
 
 
