--- a/packages/kuzu-shell/package.json
+++ b/packages/kuzu-shell/package.json
@@ -7,7 +7,7 @@
     "test": "webpack serve",
     "start": "webpack serve --config webpack.debug.js",
     "build:debug": "NODE_OPTIONS='--max-old-space-size=4096' webpack --config webpack.debug.js",
-    "build:release": "NODE_OPTIONS='--max-old-space-size=4096' webpack --config webpack.release.js",
+    "build:release": "NODE_OPTIONS='--max-old-space-size=4096' webpack --config webpack.release.js && cp public/cors/netlif.toml dist/",
     "analyze:debug": "webpack --config webpack.debug.js --analyze",
     "analyze:release": "webpack --config webpack.release.js --analyze",
     "lint": "eslint src"
