--- a/packages/kuzu-wasm/package.json
+++ b/packages/kuzu-wasm/package.json
@@ -1,15 +1,20 @@
 {
   "name": "@kuzu/kuzu-wasm",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "author": "DylanShang",
   "license": "MIT",
-  "description": "Kuzu powered by WebAssembly",
-  "main": "dist/kuzu.js",
-  "module": "dist/kuzu.js",
-  "unpkg": "dist/kuzu.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/DylanShang/kuzu-wasm"
+  },
+  "description": "Kuzu GraphDB powered by WebAssembly",
+  "main": "dist/kuzu-wasm.js",
+  "module": "dist/kuzu-browser.js",
+  "unpkg": "dist/kuzu-wasm.js",
+  "jsdelivr": "dist/kuzu-wasm.js",
   "scripts": {
-    "build:debug": "node bundle.mjs debug && cp src/kuzu-wasm.* dist/",
-    "build:release": "node bundle.mjs release && cp src/kuzu-wasm.* dist/"
+    "debug": "node bundle.mjs debug",
+    "release": "node bundle.mjs release"
   },
   "keywords": [
     "cypher",
@@ -30,12 +35,19 @@
     "esbuild": "^0.21.5"
   },
   "dependencies": {
-    "apache-arrow": "^16.1.0",
-    "arrow-js-ffi": "^0.4.2"
+    "apache-arrow": "^16.1.0"
   },
   "files": [
     "dist",
     "README.md",
     "LICENSE"
-  ]
+  ],
+  "browser": {
+    "fs": false,
+    "path": false,
+    "perf_hooks": false,
+    "os": false,
+    "worker_threads": false,
+    "crypto":false
+}
 }
