close the benckmark runner in action

--- a/.github/workflows/shell.yml
+++ b/.github/workflows/shell.yml
@@ -33,15 +33,6 @@ jobs:
     - name: Build Shell Project
       run: |
         make shell
-    - name: Run Benchmark
-      run: |
-        make benchmark
-
-    - name: Upload Benchmark Report
-      uses: actions/upload-artifact@v3
-      with:
-        name: benchmark-report
-        path: packages/benchmarks/benchmark_report.md
 
     - name: Deploy to Netlify
       uses: nwtgck/actions-netlify@v3.0
@@ -58,5 +49,15 @@ jobs:
         NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
         NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
       timeout-minutes: 10
+      
+    # - name: Run Benchmark
+    #   run: |
+    #     make benchmark
+
+    # - name: Upload Benchmark Report
+    #   uses: actions/upload-artifact@v3
+    #   with:
+    #     name: benchmark-report
+    #     path: packages/benchmarks/benchmark_report.md
 
 
