fix recursive problem in docker image

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -13,6 +13,8 @@ jobs:
       # Checkout code from repository
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       # Set up QEMU for multi-arch builds
       - name: Set up QEMU
