--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -31,6 +31,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      # Step to get the version number from CMakeLists.txt
+      - name: Get version number
+        id: get_version
+        run: |
+          VERSION=$(grep "Kuzu VERSION" kuzu/CMakeLists.txt | head -1 | grep -oE "[0-9]+\.[0-9]+\.[0-9]+\.[0-9]+")
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+
+
       # Build and push Docker image
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -38,4 +46,4 @@ jobs:
           push: true
           tags: |
             dylanshang/kuzu-wasm:latest
-            dylanshang/kuzu-wasm:${{ github.sha }}
+            dylanshang/kuzu-wasm:${{ env.VERSION }}
