--- a/packages/kuzu-wasm/package.json
+++ b/packages/kuzu-wasm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kuzu/kuzu-wasm",
-  "version": "1.0.5",
+  "version": "0.6.2-dev",
   "author": "DylanShang",
   "license": "MIT",
   "repository": {
